One mroe commit for jbuilders ridiculousness.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
         <%= link_to "SIGN IN", new_user_session_url, class: "signin-form-link" %>
         | <%= link_to "JOIN", new_user_url %>
       </nav>
-        <%= render partial: "user_sessions/form" %>
+        <%= render partial: "user_sessions/form.html.erb" %>
         <script>
         $(document).ready(function () {
           $(".signin-form-link").click(function (event) {
