--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -76,7 +76,7 @@
       <br>
       <%= f.text_field :city, placeholder: "City", size: 15 %>
       <%= f.text_field :state, placeholder: "St", size: 2 %>
-      <%= f.text_field :zip, placeholder: "Zip", size: 4 %>
+      <%= f.text_field :zipcode, placeholder: "Zip", size: 4 %>
       <br>
     </div>
   </div>
