--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -23,6 +23,20 @@ body > header > h1 > img {
   top: 7px;
 }
 
+body > header > div.signin {
+  position: absolute;
+  top: 5px;
+  right: 0;
+  text-align: right;
+}
+
+div.signin > nav.signin-links > a {
+  font-family: "Oswald";
+  font-weight: 100;
+  color: #333333;
+  font-size: 15px;
+}
+
 body > header > nav {
   width: 800px;
   margin: 0 auto;
