--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,85 +1,1 @@
-<%= form_for @user, class: "new-user" do |f| %>
-  <h1>Welcome!</h1>
-  <% email_errors = @user.errors[:email] %>
-  <div class="field clear-fix<%= " field-with-errors" if !email_errors.empty? %>">
-  <% if email_errors.count > 0 %>
-    <p><%= "Email " + email_errors.to_sentence + "." %></p>
-    <br>
-  <% end %>
-    <strong><%= f.label :email, "Email" %></strong>
-    <%= f.email_field :email, placeholder: "email@example.org" %>
-  </div>
-
-  <% password_errors = @user.errors[:password] %>
-  <% password_confirm_errors = @user.errors[:password_confirmation] %>
-  <div class="field clear-fix<%= " field-with-errors" if !password_errors.empty? || !password_confirm_errors.empty? %>">
-
-    <% if !password_errors.empty? %>
-      <p><%= "Password " + password_errors.to_sentence + "." %></p>
-      <br>
-    <% end %>
-    <% if !password_confirm_errors.empty? %>
-      <p><%= "Password confirmation " + password_confirm_errors.to_sentence + "." %></p>
-      <br>
-    <% end %>
-
-    <strong><%= f.label :password, "Password" %></strong>
-    <%= f.password_field :password, placeholder: "password", size: 20 %>
-
-    <strong><%= f.label :password_confirmation, "Confirm" %></strong>
-    <%= f.password_field :password_confirmation, placeholder: "password", size: 20 %>
-  </div>
-
-  <% fname_errors = @user.errors[:fname] %>
-  <% lname_errors = @user.errors[:lname] %>
-  <div class="field clear-fix<%= " field-with-errors" if !fname_errors.empty? || !lname_errors.empty? %>">
-
-    <% if !fname_errors.empty? %>
-      <p><%= "First name " + fname_errors.to_sentence + "." %></p>
-      <br>
-    <% end %>
-
-    <% if !lname_errors.empty? %>
-      <p><%= "Last name " + lname_errors.to_sentence + "." %></p>
-      <br>
-    <% end %>
-
-    <strong><%= f.label :fname, "Name" %></strong>
-    <%= f.text_field :fname, placeholder: "First", size: 20 %>
-
-    <%= f.text_field :lname, placeholder: "Last", size: 20 %>
-  </div>
-
-  <% phone_errors = @user.errors[:phone] %>
-  <div class="field clear-fix<%= " field-with-errors" if !phone_errors.empty? %>">
-    <% if !phone_errors.empty? %>
-      <p><%= "Phone " + phone_errors.to_sentence + "." %></p>
-      <br>
-    <% end %>
-    <strong><%= f.label :phone, "Phone" %></strong>
-    <%= f.phone_field :phone, placeholder: "(123) 456-7890", value: number_to_phone(@user.phone, area_code: true) %>
-  </div>
-
-  <% address_fields = [:address_line_1, :address_line_2, :city, :state, :zip] %>
-  <% address_errors = @user.errors.to_hash.select { |k, _| address_fields.include?(k) } %>
-  <div class="field clear-fix<%= " field-with-errors" if !address_errors.empty? %>">
-
-    <% address_errors.each do |k, v| %>
-      <p><%= "#{k.to_s.titleize} #{v.to_sentence}." %></p>
-      <br>
-    <% end %>
-    <strong><%= f.label :address_line_1, "Address" %></strong>
-    <div class="address">
-      <%= f.text_field :address_line_1, placeholder: "Address line 1" %>
-      <br>
-      <%= f.text_field :address_line_2, placeholder: "Address line 2" %>
-      <br>
-      <%= f.text_field :city, placeholder: "City", size: 15 %>
-      <%= f.text_field :state, placeholder: "St", size: 2 %>
-      <%= f.text_field :zipcode, placeholder: "Zip", size: 4 %>
-      <br>
-    </div>
-  </div>
-
-  <%= f.submit "Submit" %>
-<% end %>
+<%= render partial: 'form', locals: { user: @user } %>
