--- a/app/assets/templates/users/dashboard.jst.ejs
+++ b/app/assets/templates/users/dashboard.jst.ejs
@@ -21,7 +21,7 @@
 
 <section id="main-content">
   <header>
-    <h3>Your listings</h3>
+    <h3>Your active listings</h3>
   </header>
   <section class="owned-listings listings"></section>
 
